# cloth-simulation

./: .gitignore  LICENSE  README.md
Coding/: CMakeLists.txt
Coding/config/: config.yaml
Coding/include/: camera.hpp  cloth.hpp  cloth_simulator.hpp  defines.h  sphere.h  world_frame.hpp
Coding/python/: img2gif.py
Coding/res/shader/: axis.fs  axis.vs  cloth.fs
Coding/src/: camera.cpp  cloth.cpp  cloth_renderer.cpp  cloth_simulator.cpp  sphere.cpp
Coding/test/: main.cpp
report/: pre.md
